[metadata]
name = game-manager-austinhellerrepo
version = 0.0.2
author = Austin Heller
description = A framework for a centralized starting point for playing a game using this gaming framework
url = https://github.com/AustinHellerRepo/GameManager
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operation System :: OS Independent

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.8
install_requires =
  common-austinhellerrepo@git+https://github.com/AustinHellerRepo/Common
  game-server-manager-austinhellerrepo@git+https://github.com/AustinHellerRepo/GameServerManager
  threading-austinhellerrepo@git+https://github.com/AustinHellerRepo/Threading
  socket-austinhellerrepo@git+https://github.com/AustinHellerRepo/Socket
  client-authentication-manager-austinhellerrepo@git+https://github.com/AustinHellerRepo/ClientAuthenticationManager
  socket-queued-message-framework-austinhellerrepo@git+https://github.com/AustinHellerRepo/SocketQueuedMessageFramework

[options.packages.find]
where = src
